--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 
     <distributionManagement>
         <repository>
-            <id>orange-releases-repo</id>
+            <id>pummelo-releases-repo</id>
             <url>http://120.24.168.53:8081/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>orange-snapshots-repo</id>
+            <id>pummelo-snapshots-repo</id>
             <url>http://120.24.168.53:8081/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
@@ -27,6 +27,8 @@
         <log4j.version>2.5</log4j.version>
         <typesafe.config.version>1.3.0</typesafe.config.version>
         <spring.version>4.1.6.RELEASE</spring.version>
+        <freemarker.version>2.3.22</freemarker.version>
+        <commons.io.version>2.4</commons.io.version>
     </properties>
 
     <dependencies>
@@ -61,6 +63,21 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -76,6 +93,20 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
